--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "description": "",
   "dependencies": {
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
-    "express-validator": "^7.2.1"
+    "express-validator": "^7.2.1",
+    "pg": "^8.13.3"
   }
 }
